--- a/main.html
+++ b/main.html
@@ -10,6 +10,16 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<ol>
+		<li data-ns-test>Gaming Monitor</li>
+		<li data-ns-test>Flagship Phone</li>
+		<li data-ns-test>Exhaust</li>
+	</ol>
+	<ul>
+		<li data-ns-test>Sri Lanka</li>
+		<li data-ns-test>Nagaland</li>
+		<li data-ns-test>Thailand</li>
+	</ul>
 
 </body>
 
