--- a/main.html
+++ b/main.html
@@ -11,14 +11,14 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<ol>
-		<li data-ns-test>Gaming Monitor</li>
-		<li data-ns-test>Flagship Phone</li>
-		<li data-ns-test>Exhaust</li>
+		<li data-ns-test="shoppingList">Gaming Monitor</li>
+		<li data-ns-test="shoppingList">Flagship Phone</li>
+		<li data-ns-test="shoppingList">Exhaust</li>
 	</ol>
 	<ul>
-		<li data-ns-test>Sri Lanka</li>
-		<li data-ns-test>Nagaland</li>
-		<li data-ns-test>Thailand</li>
+		<li data-ns-test="holidayList">Sri Lanka</li>
+		<li data-ns-test="holidayList">Nagaland</li>
+		<li data-ns-test="holidayList">Thailand</li>
 	</ul>
 
 </body>
